# sericom

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  justfile  output.txt  release-plz.toml  run_console.sh  run_flamegraph.sh  run_perf.sh  run_strace.sh  sericom-cliff.toml  sericom-core-cliff.toml
.github/: dependabot.yml  mergify.yml
.github/workflows/: build.yml  cargo-build-main.yml  check.yml  release_plz.yml  sericom-release.yml
configuration/: defaults.toml  values.md
configuration/script-examples/: format-cisco.sh
sericom/: CHANGELOG.md  Cargo.toml
sericom-core/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
sericom-core/src/: cli.rs  debug.rs  lib.rs  screen_buffer.rs
sericom-core/src/configs/: appearance.rs  defaults.rs  errors.rs  mod.rs
sericom-core/src/path_utils/: macros.rs  mod.rs  validators.rs
sericom-core/src/screen_buffer/: buffer.rs  cell.rs  cursor.rs  escape.rs  line.rs  mod.rs  render.rs  screen_buffer.rs  terminal.rs  ui_command.rs
sericom-core/src/screen_buffer/layout/: frame.rs  lines.rs  mod.rs  position.rs  rect.rs
sericom-core/src/serial_actor/: mod.rs  tasks.rs
sericom-core/src/ui/: buffer.rs  frame.rs  mod.rs  position.rs  rect.rs  terminal.rs
sericom-core/src/ui/ascii/: colors.rs  mod.rs  parser.rs  process.rs  test.rs
sericom-core/src/ui/line/: cell.rs  color_state.rs  line.rs  mod.rs  span.rs
sericom/src/: main.rs
sericom/wix/: main.wxs
src/: debug.rs  lib.rs  main.rs  screen_buffer.rs  serial_actor.rs
src/configs/: errors.rs  mod.rs
src/serial_actor/: mod.rs  tasks.rs
