[workspace]
members = ["sericom", "sericom-core"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/tkatter/sericom"
exclude = ["configuration/*", ".github/*"]

[workspace.dependencies]
crossterm = { version = "0.29.0", features = ["osc52", "event-stream"] }
miette = { version = "7.6.0", features = ["fancy"] }
serial2-tokio = { version = "0.1.15", features = ["windows"] }
tokio = { version = "1.47.0", features = ["full"] }
