[package]
name = "sericom-core"
version = "0.1.0"
license = "MIT"
readme = "README.md"
edition.workspace = true
exclude.workspace = true
repository.workspace = true

[dependencies]
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
toml = "0.9.5"
crossterm.workspace = true
miette.workspace = true
serial2-tokio.workspace = true
tokio.workspace = true
