[package]
name = "sericom-core"
description = "The underlying library for sericom"
version = "0.5.0"
license = "MIT"
readme = "README.md"
edition.workspace = true
exclude.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0.224", features = ["derive"] }
thiserror = "2.0.16"
toml = "0.9.6"
chrono.workspace = true
crossterm.workspace = true
miette.workspace = true
serial2-tokio.workspace = true
tokio.workspace = true
tracing.workspace = true
