[package]
name = "sericom-core"
description = "The underlying library for sericom"
version = "0.5.0"
license = "MIT"
readme = "README.md"
edition.workspace = true
exclude.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0.226", features = ["derive"] }
thiserror = "2.0.16"
toml = "0.9.7"
chrono.workspace = true
crossterm.workspace = true
miette.workspace = true
serial2-tokio.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints.clippy]
pedantic = "warn"
perf = "warn"
nursery = "warn"
# missing_const_for_fn = "warn"
# too_long_first_doc_paragraph = "allow"
# branches_sharing_code = "warn"
# collection_is_never_read = "warn"
# derive_partial_eq_without_eq = "warn"
# doc_link_code = "warn"
# equatable_if_let = "warn"
