[package]
name = "sericom"
authors = ["Thomas Katter <tjkatter@gmail.com"]
version = "0.5.0"
description = "CLI tool for communicating with devices over a serial connection."
documentation = "https://github.com/tkatter/sericom"
license = "GPL-3.0-or-later"
keywords = ["serial", "console"]
categories = ["command-line-utilities"]
edition.workspace = true
exclude.workspace = true
readme.workspace = true
repository.workspace = true
# Change license field to this to have 'cargo-wix' automatically generate the 'License.rtf' file
# license = "GPL-3.0"

[package.metadata.deb]
maintainer = "Thomas Katter <tjkatter@gmail.com>"
copyright = "2025, Thomas Katter <tjkatter@gmail.com>"
license-file = ["LICENSE", "14"]

# When building with 'cargo-wix', statically include c lib in build
# [target.x86_64-pc-windows-msvc]
# rustflags = ["-C", "target-feature=+crt-static"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
sericom-core = "0.4.0"
tracing-appender = "0.2"
tracing-subscriber = "0.3.20"
chrono.workspace = true
tokio.workspace = true
serial2-tokio.workspace = true
miette.workspace = true
crossterm.workspace = true
tracing.workspace = true
