[package]
name = "sericom"
authors = ["Thomas Katter <tjkatter@gmail.com"]
version = "0.5.4"
description = "CLI tool for communicating with devices over a serial connection."
documentation = "https://github.com/tkatter/sericom"
license = "GPL-3.0-or-later"
keywords = ["serial", "console"]
categories = ["command-line-utilities"]
homepage = "https://github.com/tkatter/sericom"
edition.workspace = true
exclude.workspace = true
readme.workspace = true
repository.workspace = true

[package.metadata.deb]
maintainer = "Thomas Katter <tjkatter@gmail.com>"
copyright = "2025, Thomas Katter <tjkatter@gmail.com>"
license-file = ["LICENSE", "14"]

[package.metadata.wix]
license = "License.rtf"
upgrade-guid = "45B3311A-7E74-4BBA-8647-66E145142705"
path-guid = "1D7883F5-DBEB-4F8A-8F1F-79E3FA4BC55E"
eula = false

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
sericom-core = { version = "0.7.0", path = "../sericom-core" }
tracing-appender = "0.2"
tracing-subscriber = "0.3.20"
chrono.workspace = true
tokio.workspace = true
serial2-tokio.workspace = true
miette.workspace = true
crossterm.workspace = true
tracing.workspace = true

[lints.clippy]
pedantic = "warn"
perf = "warn"
nursery = "warn"
